--- a/src/styles/pages/SuperAdmin/NewRegistration.css
+++ b/src/styles/pages/SuperAdmin/NewRegistration.css
@@ -11,6 +11,13 @@
   margin-left: 270px; /* Adjust to match expanded sidebar width */
 }
 
+.new-registration-page{
+  padding: 20px;
+
+}
+
+
+
 /* .title {
   font-size: 24px;
   font-weight: 700;
@@ -31,7 +38,7 @@
   width: auto;
   border-collapse: collapse;
   background: linear-gradient(135deg, #000000, #074f8a);
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .new-registration-page .registration-table {
