--- a/src/styles/pages/SuperAdmin/Report.css
+++ b/src/styles/pages/SuperAdmin/Report.css
@@ -18,6 +18,8 @@
     gap: 30px;
     justify-content: center; /* Center the charts */
     padding: 20px; /* Add some padding */
+  
+
 
 }
 
@@ -31,6 +33,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height:320px ;
+    width: 570px;
+    margin-left: 30px;
 }
 
 .graph-card:hover {
@@ -42,6 +47,7 @@
     font-size: 18px;
     color: #ffffff;
     text-align: center;
+    /* margin-top: 20px; */
 }
 
 canvas {
@@ -57,8 +63,4 @@ canvas {
     }
 }
 
-.graph-card{
-    height:320px ;
-    width: 600px;
-}
 
