--- a/src/styles/pages/Admin/Complaint.css
+++ b/src/styles/pages/Admin/Complaint.css
@@ -37,4 +37,7 @@
   margin-bottom: 2vh;
   background-color: #fff;
   border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
