--- a/src/styles/components/Admin/TabTableView.css
+++ b/src/styles/components/Admin/TabTableView.css
@@ -1,5 +1,5 @@
 .tabs-or-status-of-complaints {
-    width: 90%;
+    width: 80%;
     height: 65vh;
 }
   
@@ -31,6 +31,8 @@
 
 .tab-content {
     padding: 20px;
+    height: 62vh;
+    overflow-y: auto;
 }
 
 .tab-content p {
@@ -59,4 +61,80 @@
   .slide-in {
     animation: slideIn 0.7s ease-in-out;
   }
+
+
   
+.complaint-table-with-details{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.complaint-table-with-details table{
+    border-collapse: separate;
+    border-spacing: 0;
+    width: 100%;
+}
+.complaint-table-with-details-row{
+    height: 15vh;
+    width: 100%;
+    background-color: #ffffff;
+    display: block;
+    margin-bottom: 5vh;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.complaint-table-with-details-row-column-1,
+.complaint-table-with-details-row-column-2,
+.complaint-table-with-details-row-column-3,
+.complaint-table-with-details-row-column-4,
+.complaint-table-with-details-row-column-5{
+    height: 15vh;
+    vertical-align: middle;
+}
+
+.complaint-table-with-details-row-column-1{
+    width: 250px;
+    text-align: center;
+}
+
+.complaint-table-with-details-row-column-1 img{
+    height: 80px;
+    width: 80px;
+    border-radius: 50px;
+}
+
+.complaint-table-with-details-row-column-2{
+    width: 30%;
+}
+
+.complaint-table-with-details-row-column-3{
+    width: 40%;
+}
+
+.complaint-table-with-details-row-column-3 p{
+    text-align: center;
+}
+
+.complaint-table-with-details-row-column-4,
+.complaint-table-with-details-row-column-5{
+    width: 200px;
+    text-align: start;
+}
+
+.complaint-table-with-details-row-column-4 button,
+.complaint-table-with-details-row-column-5 button{
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff;
+    color: #000;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.complaint-table-with-details-row-column-4 button:hover,
+.complaint-table-with-details-row-column-5 button:hover{
+    transform: scale(1.1);
+    color: #0991FF;
+}
