--- a/src/styles/components/Admin/TabView.css
+++ b/src/styles/components/Admin/TabView.css
@@ -29,6 +29,27 @@
     background-color: #69b6f5;
 }
 
+.tab-list .complaint-search-bar-list:hover{
+    background-color: #fff;
+}
+
+.Complaints-search-bar input{
+    width: 100%;
+    height: 4vh;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 2px solid #69b6f5;
+}
+
+.Complaints-search-bar input:hover{
+    border: 2px solid #0991FF;
+}
+
+.Complaints-search-bar input:focus{
+    border: 2px solid #007bff;
+    outline: none
+}
+
 .tab-content {
     padding: 20px;
     height: 62vh;
