--- a/src/styles/pages/Admin/Dashboard.css
+++ b/src/styles/pages/Admin/Dashboard.css
@@ -57,6 +57,7 @@
   background-color: #fff;
   margin-right: 10px;
   border-radius: 15px;
+  overflow-y: auto;
 }
 
 .admin-dashboard-complaint-summery{
@@ -79,6 +80,21 @@
 
 .admin-dashboard-registeroffices h3{
   margin: 20px;
+}
+
+.admin-dashboard-linked-title-bar{
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+}
+
+.admin-dashboard-linked-title-bar img{
+  height: 25px;
+  width: 25px;
+  margin-left: 3px;
+  margin-right: 7px;
 }
 
 @media (max-width: 1024px) {
