--- a/src/styles/components/Civil officer/Sidebar.css
+++ b/src/styles/components/Civil officer/Sidebar.css
@@ -113,6 +113,8 @@
   font-weight: 500;
   flex: 1;
   transition-duration: 200ms;
+  margin-left: 6px;
+  margin-top: 5px;
 }
 
 .menu-icon-item-hidden {
