--- a/src/styles/pages/Admin/AdminNewOfficer.css
+++ b/src/styles/pages/Admin/AdminNewOfficer.css
@@ -28,3 +28,44 @@
     margin: 20px;
     font-weight: 800;
 }
+
+.admin-add-new-officer-table-view{
+  width: 93%;
+  margin-left: 35px;
+  height: 80vh;
+  margin-bottom: 2vh;
+}
+
+.admin-added-new-officer-table{
+  width: 60%;
+  height: 80vh;
+  background-color: #ffffff;
+  float: left;
+  border-radius: 15px;
+}
+
+.admin-adding-new-officer-form{
+  float: right;
+  width: 38%;
+  height: 80vh;
+  background-color: #ffffff;
+  display: flex;
+  border-radius: 15px;
+}
+
+.admin-add-new-officer-table-title{
+  width: 100%;
+  height: 8vh;
+  padding: 20px;
+}
+
+.admin-add-new-officer-table-seperator{
+  width: 100%;
+  height: 2px;
+}
+
+.admin-add-new-officer-content{
+  width: 100%;
+  height: 70vh;
+  text-align: center;
+}
