--- a/src/styles/components/Admin/TableView.css
+++ b/src/styles/components/Admin/TableView.css
@@ -121,9 +121,8 @@
 
 .admin-dashboard-absent-list-column-1{
     width: 35%;
-    text-align: center;
-    vertical-align: middle;
     height: 10vh;
+    padding-left: 40px;
 }
 
 .admin-dashboard-absent-list-column-1 img{
@@ -135,11 +134,11 @@
 .admin-dashboard-absent-list-column-2{
     width: auto;
     height: 10vh;
-    padding: 10px;
 }
 
 .admin-dashboard-absent-list-column-2 h4{
     font-size: 18px;
+    font-weight: 700;
 }
 
 .admin-dashboard-absent-list-column-2 p{
