--- a/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
+++ b/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
@@ -47,6 +47,7 @@
 
   .admin-unseen-complain-detailed-panel-title h3{
     margin-left: 20px;
+    font-weight: 800;
   }
 
   .unseen-complaints-details-divs{
