--- a/src/styles/components/Admin/TableView.css
+++ b/src/styles/components/Admin/TableView.css
@@ -38,17 +38,21 @@
 
 .complaint-table-with-details-row-column-1{
     width: 250px;
-    text-align: center;
+    padding-left: 20px;
 }
 
 .complaint-table-with-details-row-column-1 img{
-    height: 80px;
-    width: 80px;
+    height: 70px;
+    width: 70px;
     border-radius: 50px;
 }
 
 .complaint-table-with-details-row-column-2{
     width: 30%;
+}
+
+.complaint-table-with-details-row-column-2 h3{
+    font-weight: 700;
 }
 
 .complaint-table-with-details-row-column-3{
@@ -84,6 +88,12 @@
 .complaint-table-with-details-row-column-5 img{
     width: 60px;
     height: 30px;
+}
+
+@media (max-width: 1024px) {
+    .complaint-table-with-details-row-column-1{
+        display: none;
+    }
 }
 
 
