--- a/src/styles/components/Admin/TableView.css
+++ b/src/styles/components/Admin/TableView.css
@@ -38,13 +38,13 @@
 
 .complaint-table-with-details-row-column-1{
     width: 250px;
-    padding-left: 20px;
 }
 
 .complaint-table-with-details-row-column-1 img{
     height: 70px;
     width: 70px;
     border-radius: 50px;
+    margin: 0 auto;
 }
 
 .complaint-table-with-details-row-column-2{
@@ -132,13 +132,13 @@
 .admin-dashboard-absent-list-column-1{
     width: 35%;
     height: 10vh;
-    padding-left: 40px;
 }
 
 .admin-dashboard-absent-list-column-1 img{
     height: 50px;
     width: 50px;
     border-radius: 50px;
+    margin: 0 auto;
 }
 
 .admin-dashboard-absent-list-column-2{
