--- a/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
+++ b/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
@@ -51,6 +51,78 @@
   }
 
   .unseen-complaints-details-divs{
-    width: 95%;
-    height: 50vh;
+    width: 100%;
+    height: 65vh;
+    margin-top: 1.5vh;
+    display: flex;
+  }
+
+  .unseen-complaints-profile-details{
+    width: 20%;
+    float: left;
+  }
+
+  .unseen-complaints-profile-details h4,
+  .unseen-complaints-profile-details p{
+    text-align: center;
+  }
+
+  .unseen-complaints-profile-details h4{
+    margin-top: 3vh;
+    font-weight: 800;
+  }
+
+  .unseen-complaints-profile-details img{
+    border-radius: 50%;
+    width: 200px;
+    height: auto;
+    margin: 0 auto;
+  }
+
+  .unseen-complaints-citizen-form-details{
+    width: 50%;
+  }
+
+  .unseen-complaints-contractordetails{
+    width: 30%;
+    float: right;
+  }
+
+  .unseen-complaints-profile-details,
+  .unseen-complaints-citizen-form-details,
+  .unseen-complaints-contractordetails{
+    height: 65vh;
+  }
+
+  .unseen-complaints-profile-details,
+  .unseen-complaints-citizen-form-details{
+    margin-right: 10px;
+    border-right: 2px solid rgba(171, 217, 255, 0.762);
+  }
+
+  .unseen-complaints-citizen-form-details-first-part{
+    width: 100%;
+    height: 8vh;
+    margin-bottom: 1vh;
+  }
+
+  .unseen-complaints-citizen-form-details-first-part h4{
+    font-weight:bold;
+  }
+
+  .citizen-form-details-first-column{
+    width: 20%;
+    height: 8vh;
+    padding-left: 20px;
+  }
+
+  .citizen-form-details-second-column{
+    width: 70%;
+    height: 8vh;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .citizen-form-details-second-column p{
+    text-align: left;
   }
