--- a/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
+++ b/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
@@ -126,3 +126,42 @@
   .citizen-form-details-second-column p{
     text-align: left;
   }
+
+  .unseen-complaints-contractor-details{
+    width: 100%;
+    height: 25vh;
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 15px;
+    margin-top: 5vh;
+    padding-left: 10%;
+  }
+
+  .unseen-complaints-contractor-details-first-div{
+    width: 40%;
+    height: auto;
+  }
+
+  .unseen-complaints-contractor-details-second-div{
+    width: 30%;
+    height: auto;
+  }
+
+  .unseen-complaints-contractor-details-second-div button{
+    width: 55%;
+    height: 5vh;
+    color: #000;
+    background: rgb(9, 145, 255);
+  }
+
+  .unseen-complaints-contractor-details-second-div button:hover{
+    transform: scale(1.1);
+    color: #0074d3;
+    color: #fff;
+  }
+
+  .extra-div-for-style{
+    width: 100%;
+    height: 3vh;
+  }
