--- a/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
+++ b/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
@@ -144,20 +144,47 @@
   }
 
   .unseen-complaints-contractor-details-second-div{
-    width: 30%;
+    width: 50%;
     height: auto;
   }
 
   .unseen-complaints-contractor-details-second-div button{
-    width: 55%;
+    width: 25%;
     height: 5vh;
     color: #000;
     background: rgb(9, 145, 255);
+    margin-right: 20px;
   }
 
   .unseen-complaints-contractor-details-second-div button:hover{
     transform: scale(1.1);
-    color: #0074d3;
+    background: #0074d3;
+    color: #fff;
+  }
+
+  .Complaint-uploaded-image-slider-view-buttons{
+    width: 100%;
+    height: 10vh;
+    margin-top: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .Complaint-uploaded-image-slider-view-buttons button{
+    margin-right: 10px;
+    width: 25%;
+    height: 6vh;
+    color: #000;
+    background: rgb(9, 145, 255);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .Complaint-uploaded-image-slider-view-buttons button:hover{
+    transform: scale(0.9);
+    background: #0074d3;
     color: #fff;
   }
 
