--- a/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
+++ b/src/styles/pages/Admin/AdminUnseenComplaintDetails.css
@@ -172,6 +172,19 @@
     padding-right: 20px;
   }
 
+  .Complaint-uploaded-completed-seal{
+    width: 20%;
+    height: 25vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .Complaint-uploaded-completed-seal img{
+    width: 100px;
+    height: auto;
+  }
+
   .Complaint-uploaded-image-slider-view-buttons button{
     margin-right: 10px;
     width: 50%;
