--- a/src/styles/components/Admin/TabView.css
+++ b/src/styles/components/Admin/TabView.css
@@ -29,15 +29,36 @@
     background-color: #69b6f5;
 }
 
-.tab-list .complaint-search-bar-list:hover{
-    background-color: #fff;
-}
 
 /* ---------------------search bar -------------------------*/
 
+.Complaints-search-bar{
+    width: 100%;
+    height: 6vh;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.Complaints-search-bar button{
+    width: 30px;
+    height: 5vh;
+    background: #0991FF;
+    margin-left: 20px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Complaints-search-bar button:hover{
+    transform: scale(0.9);
+    background: #0074d3;
+    color: #fff;
+  }
+
 .Complaints-search-bar input{
     width: 300px;
-    height: 4vh;
+    height: 5vh;
     padding-left: 10px;
     padding-right: 10px;
     border: 2px solid #69b6f5;
@@ -63,7 +84,7 @@
 
 .tab-content {
     padding: 20px;
-    height: 62vh;
+    height: 50vh;
     width: 100%;
     overflow-y: auto;
 }
