--- a/src/styles/pages/Admin/AdminNewOfficer.css
+++ b/src/styles/pages/Admin/AdminNewOfficer.css
@@ -59,13 +59,86 @@
   padding: 20px;
 }
 
+.admin-add-new-officer-table-title h3{
+  font-weight: bold;
+}
+
 .admin-add-new-officer-table-seperator{
   width: 100%;
   height: 2px;
 }
 
 .admin-add-new-officer-content{
+  display: flex;
+  justify-content: center;
   width: 100%;
   height: 70vh;
-  text-align: center;
+  overflow-y: auto;
+}
+
+.admin-add-new-officer-content table{
+  border-collapse: separate;
+  border-spacing: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.admin-add-new-officer-table-row{
+  width: 100%;
+  height: 15vh;
+  display: block;
+  background-color: #fff;
+  border-bottom: 2px solid rgb(169, 216, 255);
+  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.admin-add-new-officer-table-row:hover{
+  transform: scale(0.99);
+  background-color: rgb(169, 216, 255);
+  border-radius: 10px;
+}
+
+.admin-add-new-officer-table-row-column-1{
+  width: 250px;
+}
+
+.admin-add-new-officer-table-row-column-1 img{
+  border-radius: 50px;
+  width: 70px;
+  height: 70px;
+  margin: 0 auto;
+}
+
+.admin-add-new-officer-table-row-column-2{
+  width: 20%;
+}
+
+.admin-add-new-officer-table-row-column-2 h4{
+  font-weight: bold;
+}
+
+.admin-add-new-officer-table-row-column-2 p{
+  text-align: start;
+}
+
+.admin-add-new-officer-table-row-column-3{
+  width: 20%;
+}
+
+.admin-add-new-officer-table-row-column-4{
+  padding-right: 20px;
+  width: 45%;
+}
+
+.admin-add-new-officer-table-row-column-4 p{
+  text-align: end;
+}
+
+.admin-add-new-officer-table-row-column-1,
+.admin-add-new-officer-table-row-column-2,
+.admin-add-new-officer-table-row-column-3,
+.admin-add-new-officer-table-row-column-4{
+  vertical-align: middle;
+  height: 15vh;
 }
