add new officer form start

--- a/src/styles/pages/Admin/AdminNewOfficer.css
+++ b/src/styles/pages/Admin/AdminNewOfficer.css
@@ -44,19 +44,11 @@
   border-radius: 15px;
 }
 
-.admin-adding-new-officer-form{
-  float: right;
-  width: 38%;
-  height: 80vh;
-  background-color: #ffffff;
-  display: flex;
-  border-radius: 15px;
-}
-
 .admin-add-new-officer-table-title{
   width: 100%;
   height: 8vh;
-  padding: 20px;
+  padding: 30px;
+  padding-left: 50px;
 }
 
 .admin-add-new-officer-table-title h3{
@@ -141,4 +133,76 @@
 .admin-add-new-officer-table-row-column-4{
   vertical-align: middle;
   height: 15vh;
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.admin-add-new-officer-table-row {
+  animation: slideIn 0.5s ease-out forwards;
+}
+
+/*------------------------------------------------------------------------------------*/
+
+.admin-adding-new-officer-form{
+  float: right;
+  width: 38%;
+  height: 80vh;
+  background-color: #ffffff;
+  border-radius: 15px;
+}
+
+.add-new-officer-form-content{
+  width: 100%;
+  height: 70vh;
+  padding: 40px 30px;
+}
+
+.add-new-officer-form-Name{
+  width: 100%;
+  height: 6vh;
+  display: flex;
+}
+
+.add-new-officer-first-name{
+  float: left;
+  margin-right: 20px;
+  vertical-align: middle;
+}
+
+.add-new-officer-last-name{
+  float: right;
+  margin-bottom: 1vh;
+}
+
+.add-new-officer-first-name,
+.add-new-officer-last-name{
+  width: 50%;
+  height: 6vh;
+}
+
+.add-new-officer-form-content input{
+  width: 100%;
+  height: 6vh;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 10px;
+  border: 2px solid #69b6f5;
+}
+
+.add-new-officer-form-content input:hover{
+  border: 2px solid #0991FF;
+}
+
+.add-new-officer-form-content input:focus{
+  border: 2px solid #007bff;
+  outline: none
 }
