--- a/src/styles/pages/SuperAdmin/NewRegistration.css
+++ b/src/styles/pages/SuperAdmin/NewRegistration.css
@@ -1,106 +1,7 @@
-.admin-complaints-home-page {
-  flex-grow: 1;
-  padding: 20px;
-  min-height: 100vh;
-  margin-left: 85px;
-  transition: margin-left 0.4s ease;
-  background-color: #e8eff9;
-  overflow-y: auto;
-}
-
-.sidebar:hover ~ .admin-complaints-home-page {
-  margin-left: 260px;
-}
-
-.complaint-title-container {
-  width: calc(100% - 70px);
-  margin-left: 35px;
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  margin-bottom: 2vh;
-  background: linear-gradient(135deg, #000000, #074f8a);
-  border-radius: 15px;
-  padding: 30px;
-}
-
-.complaint-title-container h3 {
-  font-weight: 800;
-  text-align: center;
-  color: white;
-  margin-left: 0; /* Center text properly */
-}
-
-.admin-complaint-table-tab-view {
-  width: calc(100% - 70px);
-  margin-left: 35px;
-  height: 80vh;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between; /* Adjust to fit search bar and table side by side */
-  background-color: #fff;
-  border-radius: 15px;
-  box-sizing: border-box;
-}
-
-.new-registration-page {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin-right: 90px;
-}
-
-.search-bar-container {
-  margin-bottom: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  margin-top: -65px;
-}
-
-.filter-btn {
-  padding: 10px 15px;
-  margin-right: 10px;
-  border: none;
-  border-radius: 5px;
-  background: linear-gradient(135deg, #000000, #074f8a);
-  color: white;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-
-.filter-btn:hover {
-  background-color: #ffffff; /* Adjust the hover color as needed */
-  border: 2px solid #074f8a;
-  color: #074f8a;
-}
-
-.search-bar-container input {
-  padding: 10px;
-  border-radius: 5px;
-  border: 2px solid #000000;
-  width: 250px; /* Adjust as needed */
-  color: rgb(0, 0, 0);
-}
-
-.table-container {
-  width: 100%;
-  margin-top: 0;
-  margin-right: 0;
-}
-
-.registration-table {
-  width: 100%; /* Adjust to fit within the container */
-  border-collapse: collapse;
-  background: linear-gradient(135deg, #000000, #074f8a);
-  color: #ffffff;
-}
-
 .registration-table th,
 .registration-table td {
   padding: 8px 10px;
-  text-align: left;
+  text-align: center; /* Center-aligns the text */
   border-bottom: 8px solid #ffffff;
 }
 
