--- a/src/index.css
+++ b/src/index.css
@@ -138,3 +138,31 @@ nav
   background: white;
   z-index: 1000;
 }
+
+
+::-webkit-scrollbar {
+  display: none;
+   /* width for vertical scrollbars */
+  /* width: 5px; */
+   /* height for horizontal scrollbars */
+  /* height: 5px; */
+}
+
+/* Styling the thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color of the scroll thumb */
+  border-radius: 10px; /* Rounded corners */
+  border: 2px solid #ffffff; /* Adds space around the thumb */
+}
+
+/* Styling the scrollbar track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Background color of the track */
+  border-radius: 10px; /* Rounded corners */
+  border: 1px solid #d4d4d4; /* Optional: adds a border around the track */
+}
+
+/* Hover effect for the thumb */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Darker color when hovered */
+}
