--- a/src/styles/components/Admin/CivilOfficerDetails.css
+++ b/src/styles/components/Admin/CivilOfficerDetails.css
@@ -46,7 +46,8 @@
 .added-civisl-officer-personal-detail-edit-delete{
     width: 100%;
     height: 10vh;
-    background-color: blue;
+    display: flex;
+    justify-content: end;
 }
 
 .added-civisl-officer-personal-detail-table-structure-column-1{
@@ -76,3 +77,20 @@
 .added-civisl-officer-personal-detail-table-structure-column-1-second-part p{
     text-align: left;
 }
+
+.added-civisl-officer-personal-detail-edit-delete button{
+    margin-right: 20px;
+    width: 10%;
+    height: 6vh;
+    color: #000;
+    background: rgb(9, 145, 255);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.added-civisl-officer-personal-detail-edit-delete button:hover{
+    transform: scale(1.1);
+    background: #0074d3;
+    color: #fff;
+  }
