--- a/src/styles/components/Admin/Sidebar.css
+++ b/src/styles/components/Admin/Sidebar.css
@@ -44,6 +44,10 @@ body {
   border-radius: 50%;
 }
 
+.sidebar:hover .sidebar-header img{
+  width: 70px;
+}
+
 .sidebar .sidebar-header h2 {
   color: #fff;
   font-size: 1.25rem;
@@ -88,7 +92,7 @@ body {
 
 .sidebar-links {
   list-style: none;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   height: 75%;
   overflow-y: auto;
   scrollbar-width: none;
