--- a/src/styles/pages/Admin/Dashboard.css
+++ b/src/styles/pages/Admin/Dashboard.css
@@ -108,10 +108,18 @@
 
 .admin-dashboard-complaint-summery{
   width: 100%;
-  height: 40vh;
+  height: 60vh;
   background-color: #fff;
   border-radius: 15px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.admin-dashboard-complaint-summery h4{
+  font-size: 18px;
+  font-weight: 800;
   margin-bottom: 2vh;
 }
 
